Backend/services/k8/carrito-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carrito
  template:
    metadata:
      labels:
        app: carrito
    spec:
      containers:
        - name: carrito
          image: carrito-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: carrito
spec:
  selector:
    app: carrito
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
