Backend/services/k8/pagos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagos
  template:
    metadata:
      labels:
        app: pagos
    spec:
      containers:
        - name: pagos
          image: pagos-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pagos
spec:
  selector:
    app: pagos
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
