Backend/services/k8/pedido-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido
  template:
    metadata:
      labels:
        app: pedido
    spec:
      containers:
        - name: pedido
          image: pedido-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: pedido
spec:
  selector:
    app: pedido
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
