Backend/services/k8/productos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productos
  template:
    metadata:
      labels:
        app: productos
    spec:
      containers:
        - name: productos
          image: productos-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: productos
spec:
  selector:
    app: productos
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
